Reformat all java files