@@ -1,3 +1,4 @@
+
 package net.imglib2.labkit.labeling;
 
 import com.google.gson.annotations.JsonAdapter;
@@ -29,13 +30,17 @@ import java.util.stream.IntStream;
  * @author Matthias Arzt
  */
 @JsonAdapter(LabelingSerializer.Adapter.class)
-public class Labeling extends AbstractWrappedInterval implements RandomAccessibleInterval<Set<String>> {
+public class Labeling extends AbstractWrappedInterval implements
+	RandomAccessibleInterval<Set<String>>
+{
 
 	private final ImgLabeling<String, ?> imgLabeling;
 	private List<String> labels;
 	private List<CalibratedAxis> axes;
 
-	public Labeling(Map<String,IterableRegion<BitType>> regions, Interval interval) {
+	public Labeling(Map<String, IterableRegion<BitType>> regions,
+		Interval interval)
+	{
 		this(new ArrayList<>(regions.keySet()), initImgLabling(regions, interval));
 	}
 
@@ -43,12 +48,15 @@ public class Labeling extends AbstractWrappedInterval implements RandomAccessibl
 		this(new ArrayList<>(imgLabeling.getMapping().getLabels()), imgLabeling);
 	}
 
-	private static ImgLabeling<String, ?> initImgLabling(Map<String, IterableRegion<BitType>> regions, Interval interval) {
-		ImgLabeling<String, ?> imgLabeling = new ImgLabeling<>(new SparseRandomAccessIntType(interval));
+	private static ImgLabeling<String, ?> initImgLabling(
+		Map<String, IterableRegion<BitType>> regions, Interval interval)
+	{
+		ImgLabeling<String, ?> imgLabeling = new ImgLabeling<>(
+			new SparseRandomAccessIntType(interval));
 		RandomAccess<LabelingType<String>> ra = imgLabeling.randomAccess();
 		regions.forEach((label, region) -> {
 			Cursor<Void> cursor = region.cursor();
-			while(cursor.hasNext()) {
+			while (cursor.hasNext()) {
 				cursor.fwd();
 				ra.setPosition(cursor);
 				ra.get().add(label);
@@ -65,7 +73,8 @@ public class Labeling extends AbstractWrappedInterval implements RandomAccessibl
 	}
 
 	private List<CalibratedAxis> initAxes(int i) {
-		return IntStream.range(0, i).mapToObj(ignore -> new DefaultLinearAxis()).collect(Collectors.toList());
+		return IntStream.range(0, i).mapToObj(ignore -> new DefaultLinearAxis())
+			.collect(Collectors.toList());
 	}
 
 	public Labeling(List<String> labels, Interval interval) {
@@ -73,7 +82,7 @@ public class Labeling extends AbstractWrappedInterval implements RandomAccessibl
 	}
 
 	public Interval interval() {
-		return new FinalInterval( imgLabeling );
+		return new FinalInterval(imgLabeling);
 	}
 
 	public List<String> getLabels() {
@@ -81,7 +90,8 @@ public class Labeling extends AbstractWrappedInterval implements RandomAccessibl
 	}
 
 	public void setAxes(List<CalibratedAxis> axes) {
-		this.axes = axes.stream().map(CalibratedAxis::copy).collect(Collectors.toList());
+		this.axes = axes.stream().map(CalibratedAxis::copy).collect(Collectors
+			.toList());
 	}
 
 	public Map<String, RandomAccessibleInterval<BitType>> regions() {
@@ -94,8 +104,9 @@ public class Labeling extends AbstractWrappedInterval implements RandomAccessibl
 		Cursor<?> cursor = sparsityCursor();
 		RandomAccess<LabelingType<String>> ra = imgLabeling.randomAccess();
 		Map<String, SparseIterableRegion> regions = new TreeMap<>();
-		labels.forEach(label -> regions.put(label, new SparseIterableRegion(imgLabeling)));
-		while(cursor.hasNext()) {
+		labels.forEach(label -> regions.put(label, new SparseIterableRegion(
+			imgLabeling)));
+		while (cursor.hasNext()) {
 			cursor.fwd();
 			ra.setPosition(cursor);
 			ra.get().forEach(label -> regions.get(label).add(cursor));
@@ -105,22 +116,25 @@ public class Labeling extends AbstractWrappedInterval implements RandomAccessibl
 
 	public Cursor<?> sparsityCursor() {
 		RandomAccessibleInterval<?> indexImg = imgLabeling.getIndexImg();
-		if(indexImg instanceof SparseRandomAccessIntType)
+		if (indexImg instanceof SparseRandomAccessIntType)
 			return ((SparseRandomAccessIntType) indexImg).sparseCursor();
 		else {
-			RandomAccessible<Void> voids = ConstantUtils.constantRandomAccessible(null,
-					imgLabeling.numDimensions());
+			RandomAccessible<Void> voids = ConstantUtils.constantRandomAccessible(
+				null, imgLabeling.numDimensions());
 			return Views.interval(voids, imgLabeling).cursor();
 		}
 	}
 
-	public static <T> RandomAccessibleInterval<BitType> slice(RandomAccessibleInterval<? extends Set<T>> labeling, T value) {
+	public static <T> RandomAccessibleInterval<BitType> slice(
+		RandomAccessibleInterval<? extends Set<T>> labeling, T value)
+	{
 		Converter<Set<T>, BitType> converter = (in, out) -> {
 			@SuppressWarnings("unchecked")
 			SetEntryAsBitType<T> modifyingBitType = ((SetEntryAsBitType<T>) out);
 			modifyingBitType.setSet(in);
 		};
-		return Converters.convert(labeling, converter, new SetEntryAsBitType<>(value));
+		return Converters.convert(labeling, converter, new SetEntryAsBitType<>(
+			value));
 	}
 
 	public RandomAccessibleInterval<? extends IntegerType<?>> getIndexImg() {
@@ -130,6 +144,7 @@ public class Labeling extends AbstractWrappedInterval implements RandomAccessibl
 	public List<Set<String>> getLabelSets() {
 		LabelingMapping<String> mapping = imgLabeling.getMapping();
 		return new AbstractList<Set<String>>() {
+
 			@Override
 			public Set<String> get(int index) {
 				return mapping.labelsAtIndex(index);
@@ -148,26 +163,25 @@ public class Labeling extends AbstractWrappedInterval implements RandomAccessibl
 
 	public void addLabel(String label) {
 		Objects.requireNonNull(label);
-		if(labels.contains(label))
-			return;
+		if (labels.contains(label)) return;
 		labels.add(label);
 	}
 
-	public void addLabel( String newName, RandomAccessibleInterval<? extends BooleanType<?>> bitmap )
+	public void addLabel(String newName,
+		RandomAccessibleInterval<? extends BooleanType<?>> bitmap)
 	{
 		addLabel(newName);
-		LoopBuilder.setImages( bitmap, this).forEachPixel( (i,o) -> {
-			if(i.get()) o.add(newName);
-		} );
+		LoopBuilder.setImages(bitmap, this).forEachPixel((i, o) -> {
+			if (i.get()) o.add(newName);
+		});
 	}
 
 	public void removeLabel(String label) {
-		if(!labels.contains(label))
-			return;
+		if (!labels.contains(label)) return;
 		labels.remove(label);
 		Cursor<?> cursor = sparsityCursor();
 		RandomAccess<Set<String>> ra = randomAccess();
-		while(cursor.hasNext())	{
+		while (cursor.hasNext()) {
 			cursor.fwd();
 			ra.setPosition(cursor);
 			ra.get().remove(label);
@@ -176,21 +190,20 @@ public class Labeling extends AbstractWrappedInterval implements RandomAccessibl
 
 	public void renameLabel(String oldLabel, String newLabel) {
 		int index = labels.indexOf(oldLabel);
-		if(index < 0)
-			return;
+		if (index < 0) return;
 		labels.set(index, newLabel);
 		Cursor<?> cursor = sparsityCursor();
 		RandomAccess<Set<String>> ra = randomAccess();
-		while(cursor.hasNext())	{
+		while (cursor.hasNext()) {
 			cursor.fwd();
 			ra.setPosition(cursor);
 			Set<String> set = ra.get();
-			if(set.remove(oldLabel))
-				set.add( newLabel );
+			if (set.remove(oldLabel)) set.add(newLabel);
 		}
 	}
 
 	public static class SetEntryAsBitType<T> extends BitType {
+
 		private Set<T> set = null;
 		private final T entry;
 
@@ -214,14 +227,14 @@ public class Labeling extends AbstractWrappedInterval implements RandomAccessibl
 
 		@Override
 		public boolean get() {
-			if(set == null) return false;
+			if (set == null) return false;
 			return set.contains(entry);
 		}
 
 		@Override
 		public void set(boolean value) {
-			if(set == null) return;
-			if(value) set.add(entry);
+			if (set == null) return;
+			if (value) set.add(entry);
 			else set.remove(entry);
 		}
 	}
